--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
-    <title>Hexashop Ecommerce HTML CSS Template</title>
+    <title>Siska's Shop</title>
 
 
     <!-- Additional CSS Files -->
@@ -256,7 +256,7 @@
                                 </div>
                                 <div class="down-content">
                                     <h4>Love Nana ‘20</h4>
-                                    <span>$150.00</span>
+                                    <span>Rp 1.499.999</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star"></i></li>
@@ -279,7 +279,7 @@
                                 </div>
                                 <div class="down-content">
                                     <h4>Classic Spring</h4>
-                                    <span>$120.00</span>
+                                    <span>Rp 1.299.999</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star"></i></li>
@@ -327,7 +327,7 @@
                                 </div>
                                 <div class="down-content">
                                     <h4>New Green Jacket</h4>
-                                    <span>$75.00</span>
+                                    <span>Rp 899.999</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star"></i></li>
@@ -350,7 +350,7 @@
                                 </div>
                                 <div class="down-content">
                                     <h4>Classic Dress</h4>
-                                    <span>$45.00</span>
+                                    <span>Rp 799.999</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star"></i></li>
@@ -373,7 +373,7 @@
                                 </div>
                                 <div class="down-content">
                                     <h4>Spring Collection</h4>
-                                    <span>$130.00</span>
+                                    <span>Rp 1.299.999</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star"></i></li>
@@ -396,7 +396,7 @@
                                 </div>
                                 <div class="down-content">
                                     <h4>Classic Spring</h4>
-                                    <span>$120.00</span>
+                                    <span>Rp 1.299.999</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star"></i></li>
@@ -444,7 +444,7 @@
                                 </div>
                                 <div class="down-content">
                                     <h4>School Collection</h4>
-                                    <span>$80.00</span>
+                                    <span>Rp 899.999</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star"></i></li>
@@ -467,7 +467,7 @@
                                 </div>
                                 <div class="down-content">
                                     <h4>Summer Cap</h4>
-                                    <span>$12.00</span>
+                                    <span>Rp 239.999</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star"></i></li>
@@ -490,7 +490,7 @@
                                 </div>
                                 <div class="down-content">
                                     <h4>Classic Kid</h4>
-                                    <span>$30.00</span>
+                                    <span>Rp 359.999</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star"></i></li>
@@ -513,7 +513,7 @@
                                 </div>
                                 <div class="down-content">
                                     <h4>Classic Spring</h4>
-                                    <span>$120.00</span>
+                                    <span>Rp 1.199.999</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star"></i></li>
